--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "s",
+  "name": "crockettford.dev",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,14 +10,21 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.1.1",
+    "@astrojs/db": "^0.14.6",
+    "@astrojs/node": "^9.0.3",
+    "@astrojs/tailwind": "^6.0.0",
     "@fontsource-variable/inter": "^5.0.18",
     "@fontsource-variable/roboto-slab": "^5.0.20",
     "@iconify-json/bi": "^1.1.23",
     "aos": "^3.0.0-beta.6",
-    "astro": "^4.15.8",
+    "astro": "^5.2.6",
     "astro-icon": "^1.1.0",
-    "tailwindcss": "^3.4.4"
+    "better-sqlite3": "^11.8.1",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.39.3",
+    "tailwindcss": "^3.4.4",
+    "tailwindcss-intersect": "^2.1.0",
+    "tailwindcss-motion": "^1.1.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
