--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/db": "^0.14.6",
     "@astrojs/node": "^9.0.3",
+    "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^6.0.0",
     "@fontsource-variable/inter": "^5.0.18",
     "@fontsource-variable/roboto-slab": "^5.0.20",
